# Bitcoin-Enterprise-Suite

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLISHING_COMPLETE.md  README.md  RELEASES.md  SECURITY.md  deny.toml  publish-now.sh
.github/: CODEOWNERS  FUNDING.yml  REPOSITORY_SETUP.md  branch-protection-rules.md  dependabot.yml  pull_request_template.md  release-aicrm-sdk.md  release-biscol.md  release-cci-sat.md  release-imo-eo.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  security-announcements.yml  security.yml
docs/: CODE_OF_CONDUCT.md  README.md
docs/api/: README.md
docs/architecture/: biscol.md  overview.md  security.md
docs/getting-started/: README.md
docs/guides/: best-practices.md  roadmap.md
docs/marketing/: COMMUNITY_STRATEGY.md  GITHUB_OPTIMIZATION.md  LAUNCH_PLAN.md
docs/security/: SECURITY.md  SUBSCRIPTION.md  audit-reports.md  cryptography.md  secure-coding-practices.md  security.asc  threat-model.md
examples/: README.md
examples/aicrm-sdk/: risk_analysis_example.rs
examples/biscol/: basic_contract.rs  smart_contract_example.rs
examples/cci-sat/: atomic_swap_example.rs
examples/imo-eo/: mining_optimization_example.rs
libs/aicrm-sdk/: Cargo.toml  README.md
libs/aicrm-sdk/benches/: ml_inference.rs  risk_scoring.rs
libs/aicrm-sdk/src/: analytics.rs  compliance.rs  error.rs  lib.rs  ml.rs  monitoring.rs  reporting.rs  risk.rs
libs/biscol/: Cargo.toml  README.md
libs/biscol/benches/: script_execution.rs  taproot_operations.rs
libs/biscol/src/: compliance.rs  contract.rs  error.rs  lib.rs  multisig.rs  script.rs  taproot.rs  zk.rs
libs/cci-sat/: Cargo.toml  README.md
libs/cci-sat/benches/: atomic_swaps.rs  lightning_channels.rs
libs/cci-sat/src/: atomic_swap.rs  bridge.rs  error.rs  lib.rs  lightning.rs  monitoring.rs  protocols.rs  wallet.rs
libs/imo-eo/: Cargo.toml  README.md
libs/imo-eo/benches/: energy_analytics.rs  mining_optimization.rs
libs/imo-eo/src/: analytics.rs  carbon.rs  energy.rs  error.rs  hardware.rs  lib.rs  mining.rs  optimization.rs
scripts/: publish-releases.sh  setup-branch-protection.sh
